--- a/css/rensposive.css
+++ b/css/rensposive.css
@@ -14,7 +14,7 @@
         width: 90%;
     }
     .btn {
-        margin: 10px auto;
+        margin-left: 45%;
     }
 }
 
@@ -35,8 +35,8 @@
     .form-control {
         width: 90%;
     }
-    .btn {
-        margin: 10px auto;
+   .btn {
+        margin-left: 35%;
     }
 }
 
